--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>hibernate-types-52</artifactId>
             <version>2.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
